--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,10 +1,15 @@
+<IfModule mod_fcgid.c>
+AddHandler fcgid-script .php
+FcgidWrapper /home/winb0maq/tms.winbet-bg.com/WINbetTaskManager/web/php.fcgi .php
+</IfModule>
 # Use the front controller as index file. It serves as a fallback solution when
 # every other rewrite/redirect fails (e.g. in an aliased environment without
 # mod_rewrite). Additionally, this reduces the matching process for the
 # start page (path "/") because otherwise Apache will apply the rewriting rules
 # to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
+
 DirectoryIndex app.php
-AddHandler application/x-httpd-php7 .php
+# AddHandler application/x-httpd-php7 .php
 # By default, Apache does not evaluate symbolic links if you did not enable this
 # feature in your server configuration. Uncomment the following line if you
 # install assets as symlinks or if you experience problems related to symlinks
