--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,7 +13,7 @@ security:
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/(_(profiler|wdt)|css|files|js)/
             security: false
 
         main:
